--- a/PhotoFlickr/PhotoFlickr-Info.plist
+++ b/PhotoFlickr/PhotoFlickr-Info.plist
@@ -16,6 +16,7 @@
 			<array>
 				<string>Untitled-1.png</string>
 				<string>icon-app.png</string>
+				<string>icon-app 10.41.39 AM.png</string>
 			</array>
 		</dict>
 	</dict>
